add new proyect

--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
                     </div>
                     <div class="blob"></div>
                 </div>
+                <div class="card-1 dos">
+                    <div class="bg">
+                        <div class="img-header pTwo-2-1"></div>
+                        <div class="info">
+                            <p class="title">Rest Country Api Challenge</p>
+                            <p>The page was developed using React, Typescript and Chakra UI. 
+                                The solution is part of a challenge from the website Frontend Mentor where 
+                                you have to use an API called RestCountries that shows information about more than 200 countries.
+                                Additionally, there are two filters: by name and by region (continent).
+                            </p>
+                            </div>
+                            <div class="footer">
+                            <p class="tag">#React.JS #React-Query #TYPESCRIPT #Chakra UI #Zustand</p>
+                            <button type="button" class="action"><a href="https://whereintheworld-mgf.netlify.app/">Learn more!</a></button>
+                            </div>
+                    </div>
+                    <div class="blob"></div>
+                </div>
                 <div class="card-1 uno">
                     <div class="bg">
                         <div class="img-header">
