--- a/index.html
+++ b/index.html
@@ -76,18 +76,19 @@
                 </div>
                 <div class="card-1 dos">
                     <div class="bg">
-                        <div class="img-header pTwo-2-1"></div>
+                        <div class="img-header pTwo-2-2"></div>
                         <div class="info">
-                            <p class="title">Rest Country Api Challenge</p>
-                            <p>The page was developed using React, Typescript and Chakra UI. 
-                                The solution is part of a challenge from the website Frontend Mentor where 
-                                you have to use an API called RestCountries that shows information about more than 200 countries.
-                                Additionally, there are two filters: by name and by region (continent).
+                            <p class="title">IP-Address-Tracker</p>
+                            <p>The challenge is to build out this IP Address Tracker app. 
+                                To get the IP Address locations, 
+                                i'll be using the IP Geolocation API by IPify. To generate the map, we recommend using LeafletJS. 
+                                The challenge is that users should be able to search and find the 
+                                location, timezone, ip address and isp of whatever domain or ip address they want.
                             </p>
                             </div>
                             <div class="footer">
-                            <p class="tag">#React.JS #React-Query #TYPESCRIPT #Chakra UI #Zustand</p>
-                            <button type="button" class="action"><a href="https://whereintheworld-mgf.netlify.app/">Learn more!</a></button>
+                            <p class="tag">#React.JS #React-Query #TYPESCRIPT #Zustand</p>
+                            <button type="button" class="action"><a href="https://ipaddresstracker-mgf.netlify.app/">Learn more!</a></button>
                             </div>
                     </div>
                     <div class="blob"></div>
